--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,37 @@
 {
-    "name": "laravel-admin-ext/backup",
+    "name": "php-panel/ladmin-ext-backup",
     "description": "Backup extension for laravel-admin",
     "type": "library",
-    "keywords": ["laravel-admin", "backup"],
-    "homepage": "https://github.com/laravel-admin-extensions/backup",
-    "license": "MIT",
+    "keywords": [
+        "laravel-admin",
+        "backup"
+    ],
+    "homepage": "https://github.com/php-panel/ladmin-ext-backup",
+    "license": "Apache-2.0",
     "authors": [
         {
-            "name": "z-song",
-            "email": "zosong@126.com"
+            "name": "leeqvip",
+            "email": "leeqvip@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "encore/laravel-admin": ">=1.5",
-        "spatie/laravel-backup": ">=5.0"
+        "php": ">=8.2",
+        "php-panel/laravel-admin": "^3.0",
+        "spatie/laravel-backup": "^9.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "laravel/laravel": "~5.5"
+        "phpunit/phpunit": "^11.0",
+        "laravel/laravel": "^12.0"
     },
     "autoload": {
         "psr-4": {
-            "Encore\\Admin\\Backup\\": "src/"
+            "Ladmin\\Backup\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Encore\\Admin\\Backup\\BackupServiceProvider"
+                "Ladmin\\Backup\\BackupServiceProvider"
             ]
         }
     }
